--- a/charity-org/src/main/resources/templates/VisaView.html
+++ b/charity-org/src/main/resources/templates/VisaView.html
@@ -11,14 +11,18 @@
     <link rel="stylesheet" href="/css/materialize.min.css">
     <link rel="stylesheet" href="/css/tooplate.css">
 </head>
+<style>
+    body {background-color: white;}
+    * {color:black;}
 
+</style>
 <body id="register">
     <div class="container">
         <div class="row">
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                 <header class="mb-5">
-                    <h3 class="mt-0 white-text">Charity</h3>
-                    <p class="grey-text mb-4">Kindly, enter your credit card details.</p>
+                    <h3 class="mt-0">Charity</h3>
+                    <p class="mb-4">Kindly, enter your credit card details.</p>
 
                 </header>
             </div>
@@ -38,16 +42,6 @@
                 
             </div>
         </div>
-        <footer class="row tm-mt-big mb-3">
-            <div class="col-xl-12">
-                <p class="text-center grey-text text-lighten-2 tm-footer-text-small">
-                    Copyright &copy; 2018 Company Name
-
-                    - <a rel="nofollow" href="http://www.tooplate.com/view/2105-input">Input</a> by
-                    <a rel="nofollow" href="http://tooplate.com" class="tm-footer-link">Tooplate</a>
-                </p>
-            </div>
-        </footer>
     </div>
 
     <script>
