--- a/charity-org/src/main/resources/templates/events-list.html
+++ b/charity-org/src/main/resources/templates/events-list.html
@@ -51,7 +51,7 @@
 
     <!-- Back to User List -->
     <div class="text-center mt-4">
-        <a href="/users" class="btn btn-primary">Back to User List</a>
+        <a th:href= "@{/}" class="btn btn-primary">Back</a>
     </div>
 </div>
 
