--- a/charity-org/src/main/resources/templates/HomePage.html
+++ b/charity-org/src/main/resources/templates/HomePage.html
@@ -136,7 +136,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Events</h5>
                     <p class="card-text">Discover upcoming events and participate in our initiatives.</p>
-                    <button class="btn btn-secondary" onclick="location.href='/events/get-all'">View Events</button>
+                    <button class="btn btn-secondary" onclick="location.href='/events/all'">View Events</button>
                 </div>
             </div>
         </div>
