--- a/charity-org/src/main/resources/templates/edit-event-form.html
+++ b/charity-org/src/main/resources/templates/edit-event-form.html
@@ -36,8 +36,14 @@
             </div>
 
             <div class="mb-3">
-                <label for="eventLocation" class="form-label">Event Location (ID)</label>
-                <input type="number" id="eventLocation" th:field="*{eventLocation.id}" class="form-control" required />
+                <label for="eventLocationId" class="form-label">Event Location</label>
+                <select id="eventLocationId" name="eventLocationId" class="form-select" th:field="*{eventLocation.id}" required>
+                    <option value="" disabled selected>Select an address</option>
+                    <option th:each="address : ${addresses}"
+                            th:value="${address.id}"
+                            th:text="${address.name}">
+                    </option>
+                </select>
                 <div class="invalid-feedback">Event location ID is required.</div>
             </div>
 
